objects/EUR_CRM_Contract_Line_Item__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Available_by_the_Glass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available by the Glass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Name_Reference__c</fullName>
        <formula>EUR_CRM_Contract_Mechanic__r.EUR_CRM_Brand_Quality__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Quality Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Name__c</fullName>
        <label>Brand-Quality Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <description>Brand-Quality of Contract Mechanic
Uses by:
UK</description>
        <formula>EUR_CRM_Contract_Mechanic__r.EUR_CRM_Brand_Quality__r.Id</formula>
        <inlineHelpText>Contract Mechanic&apos;s Brand-Quality</inlineHelpText>
        <label>Brand-Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category_Name__c</fullName>
        <formula>EUR_CRM_Contract_Mechanic__r.EUR_CRM_Brand_Quality__r.EUR_CRM_Brand__r.EUR_CRM_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cocktail_Name__c</fullName>
        <label>Cocktail Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cocktail_Percent__c</fullName>
        <description>Percentageof PR brands against all cocktails</description>
        <label>Cocktail Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Mechanic_Ref__c</fullName>
        <label>Contract Mechanic Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Mechanic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Mechanic</label>
        <referenceTo>EUR_CRM_Contract_Mechanic__c</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>EUR_CRM_Contract__c</referenceTo>
        <relationshipName>Contract_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_Name__c</fullName>
        <label>Mechanic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_Type_Name__c</fullName>
        <description>Mechanic Type Name</description>
        <formula>EUR_CRM_Contract_Mechanic__r.EUR_CRM_Mechanic__r.EUR_CRM_Mechanic_Type__r.Name</formula>
        <label>Mechanic Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To identify which Mechanic Type Lump Sum is for.</description>
        <label>Mechanic Type</label>
        <referenceTo>EUR_CRM_Mechanic_Type__c</referenceTo>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_Cocktails__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For the following affiliates:
1. UK (GB)</description>
        <label>Number of Cocktails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_People__c</fullName>
        <description>For the following affiliates:
1. UK (GB)</description>
        <label>No. of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Number_of_Cocktails__c</fullName>
        <label>Number of Cocktails</label>
        <summaryForeignKey>EUR_CRM_Contract_Cocktail__c.EUR_CRM_Contract_Line_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Process_Option_Lump_Sum__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process Type: Lump Sum
For system use only</description>
        <label>Lump Sum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Retro_Per_9L__c</fullName>
        <label>Retro</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Deal_Mechanic_Name__c</fullName>
        <formula>EUR_CRM_Stock_Deal__r.EUR_CRM_Stock_Deal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Deal Mechanic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Deal Mechanic</label>
        <referenceTo>EUR_CRM_Stock_Deal_Mechanic__c</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>EUR_CRM_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TotalSpend__c</fullName>
        <description>Total Spend = Qty per Annum * Retro</description>
        <formula>EUR_Min_Qty_Per_Annum_9L__c *  
(EUR_CRM_Retro_Per_9L__c 
+
IF( ISBLANK( EUR_CRM_Stock_Deal__c) , 0, (((EUR_CRM_Stock_Deal__r.EUR_CRM_Litres_per_Case__c/ EUR_CRM_Stock_Deal__r.EUR_CRM_Bottles_per_Case_BQ__c/ EUR_CRM_Stock_Deal__r.EUR_CRM_Liquid_per_Bottle_litre__c/ EUR_CRM_Stock_Deal__r.EUR_CRM_Qty_Buy__c )* EUR_CRM_Stock_Deal__r.EUR_CRM_Qty_Free__c)* EUR_CRM_Stock_Deal__r.EUR_CRM_RTM_Price__c )) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Value_Reference__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Value Reference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Value__c</fullName>
        <formula>EUR_CRM_TotalSpend__c + EUR_CRM_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_Min_Qty_Per_Annum_9L__c</fullName>
        <label>Qty (9L cases)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Contract Line Item (EU)</label>
    <nameField>
        <displayFormat>CLI-{0000000000}</displayFormat>
        <label>Contract Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Item (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Contract_Line_Item</fullName>
        <active>true</active>
        <label>DE Contract Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Contract_Line_Item</fullName>
        <active>true</active>
        <label>EUR FI Contract Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Contract_Line_Item</fullName>
        <active>true</active>
        <label>GB Contract Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>